<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_otp_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_msg"
        android:textColor="#000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_fname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/otp"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="Enter Code"
            android:textColor="#000"
            android:inputType="number"
            android:maxLength="10" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/resend"
        android:textColor="#00f"
        android:textStyle="bold"
        android:clickable="true" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/new_password"
            android:textColor="#000"
            android:textSize="16sp"
             />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="Enter password"
            android:textColor="#000"
            android:inputType="textPassword"
            android:digits="@string/validation"
            android:fontFamily="sans-serif-bold" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_cpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/con_password"
            android:textColor="#000"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edt_cpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="#000"
            android:inputType="textPassword"
            android:digits="@string/validation" />
    </LinearLayout>
    
     <Button android:id="@+id/btn_changepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_pass"
        android:layout_marginTop="10dp"/>

</LinearLayout>