<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

        <TextView
            android:id="@+id/txt_uname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/uname"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_uname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="Enter User Name"
            android:textColor="#000" />
    </LinearLayout>
    
    <Button android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="10dp"/>
    
    <TextView android:id="@+id/txt_newuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textColor="#00f"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:clickable="true"/>
    
    <TextView android:id="@+id/txt_exits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exits_login"
        android:textColor="#00f"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:clickable="true"/>

</LinearLayout>
