<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_fname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/fname"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_fname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="Enter First Name"
            android:textColor="#000" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_lname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/lname"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_lname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="Enter last Name"
            android:textColor="#000" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/phno"
            android:textColor="#000"
            android:textSize="16sp"
            android:gravity="left" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="Enter Mobile No"
            android:textColor="#000" />
    </LinearLayout>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="16sp"
             />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="Enter password"
            android:textColor="#000"
            android:inputType="textPassword" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_cpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/con_password"
            android:textColor="#000"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edt_cpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="#000"
            android:inputType="textPassword" />
    </LinearLayout>
    
    <Button android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#000"
        android:layout_marginTop="20dp"/>
    
    <TextView android:id="@+id/txt_exits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exits_login"
        android:textColor="#00f"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:clickable="true"/>
    
</LinearLayout>