<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/new_password"
            android:textColor="#000"
            android:textSize="16sp"
             />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="Enter password"
            android:textColor="#000"
            android:inputType="textPassword"
            android:digits="@string/validation" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_cpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/con_password"
            android:textColor="#000"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edt_cpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="#000"
            android:inputType="textPassword"
            android:digits="@string/validation" />
    </LinearLayout>
    
     <Button android:id="@+id/btn_changepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_pass"
        android:layout_marginTop="10dp"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    

</LinearLayout>
